--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backendForBlockLightApp",
+  "name": "backend-for-bl-app",
   "version": "0.0.1",
   "description": "",
   "author": "",
